--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #f4f4f4;
+  background-color: #2E8B57;
+  
 }
 
 /* Cabeçalho principal */
@@ -74,6 +75,13 @@ body {
   height: 150px;
 }
 
+/* Linha de Divisão */
+.linha-divisao {
+  width: 100%;
+  height: 3px;
+  background-color: #a03834 ;
+  border: none;
+}
 
 /* Menu de navegação */
 .menu-nav {
@@ -111,14 +119,15 @@ body {
 /* Estilo de slider para fotos */
 .slider {
   margin: 0 auto;
-  width: 800px;
-  height: 400px;
+  width: 100%;
+  height: 620px;
   overflow: hidden;
+  margin-top: -30px;
 }
 
 .slides {
   width: 400%;
-  height: 400px;
+  height: 620px;
   display: flex;
 }
 
@@ -133,13 +142,14 @@ body {
 }
 
 .slide img {
-  width: 800px;
+  width: 100%;
+  height: 620px;
 }
 
 .manual-navigation {
   position: absolute;
-  width: 800px;
-  margin-top: -40px;
+  width: 100%;
+  margin-top: -120px;
   display: flex;
   justify-content: center;
 }
@@ -182,8 +192,8 @@ body {
 
 .navigation-auto {
   position: absolute;
-  width: 800px;
-  margin-top:360px;
+  width: 100%;
+  margin-top:500px;
   display: flex;
   justify-content: center;
 }
@@ -202,4 +212,39 @@ body {
 
 #radio3:checked ~ .navigation-auto .auto-btn3 {
   background-color: #FFF;
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border-radius: 5px;
+  width: 300px;
+  height: 150px;
+}
+
+.overlay p {
+  font-size: 24px;
+  margin: 10px 0 20px 0;
+  color: white;
+}
+
+.overlay button {
+  padding: 10px 20px;
+  background-color: #2E8B57 ;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  width: 200px;
+}
+
+.overlay button:hover {
+  background-color: #1d4b31;
 }
