--- a/styles.css
+++ b/styles.css
@@ -250,3 +250,38 @@ body {
 .overlay button:hover {
   background-color: #1d4b31;
 }
+
+
+/* Sobre */
+
+.sobre {
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  margin-top: 40px;
+  width: 100%;
+  height: 600px;
+}
+
+.sobre h1 {
+  color: #a03834;
+  font-size: 40px;
+}
+
+.sobre h2 {
+  color: #FFF;
+  font-size: 24px;
+  margin-bottom: 20px;
+  font-weight: 400;
+}
+
+.sobre p {
+  margin: 0 500px;
+  color: #FFF;
+  font-size: 18px;
+  margin-bottom: 20px;
+  font-weight: 400;
+  text-align: justify;
+}
